updated dtos